Added input fields for adding/editing a movie, made userInterface little bit pleasing.

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,45 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Movie Library</title>
 </head>
 <body>
-    <h1>Movie Library</h1>
-    <h3>Add</h3>
-    <form action="javascript:void(0);" method="POST" onsubmit="addItem()">
-        <input type="text" id="add-title" placeholder="Movie Title">
-        <input type="text" id="add-genre" placeholder="Genre">
-        <input type="text" id="add-director" placeholder="Director">
-        <input type="submit" value="Add">
-    </form>
-
-    <div id="spoiler">
-        <h3>Edit</h3>
-        <form class="my-form">
-            <input type="hidden" id="edit-movie-id">
-            <input type="text" id="edit-title">
-            <input type="text" id="edit-genre">
-            <input type="text" id="edit-director">
-            <input type="submit" value="Save">
-            <a onclick="closeInput()" aria-label="Close">&#10006;</a>
-        </form>
+    <h3 class="mainTitle">Movie Library</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <form action="javascript:void(0);" method="POST" onsubmit="addItem()">
+                    <div class="col-12" id="add-movie">
+                        <div class="form-group col-10">
+                            <label for="inputMovieTitle">Movie Title</label>
+                            <input type="text" class="form-control" id="add-title" placeholder="Enter movie title..">
+                        </div>
+                        <div class="form-group col-10">
+                            <label for="inputMovieGenre">Movie Genre</label>
+                            <input type="text" class="form-control" id="add-genre" placeholder="Enter movie genre..">
+                        </div>
+                        <div class="form-group col-10">
+                            <label for="inputMovieDirector">Movie Director</label>
+                            <input type="text" class="form-control" id="add-director" placeholder="Enter movie director..">
+                        </div>
+                        <button type="submit" class="btn btn-primary col-4" id="btn-add-movie">Add a New Movie</button>
+                    </div>
+                </form>
+                <form>
+                    <div class="col-12" id="edit-movie">
+                        <div class="form-group col-10">
+                            <label for="editMovieId">Movie Id</label>
+                            <input type="text" class="form-control" id="edit-movie-id" placeholder="Enter movie Id..">
+                        </div>
+                        <div class="form-group col-10">
+                            <label for="editMovieTitle">Movie Title</label>
+                            <input type="text" class="form-control" id="edit-movie-title" placeholder="Enter movie title..">
+                        </div>
+                        <div class="form-group col-10">
+                            <label for="editMovieGenre">Movie Genre</label>
+                            <input type="text" class="form-control" id="edit-movie-genre" placeholder="Enter movie genre..">
+                        </div>
+                        <div class="form-group col-10">
+                            <label for="editMovieDirector">Movie Director</label>
+                            <input type="text" class="form-control" id="edit-movie-director" placeholder="Enter movie director..">
+                        </div>
+                        <button type="submit" class="btn btn-primary col-4" id="btn-edit-movie">Edit a Movie</button>
+                    </div>
+                </form>
+            </div>
+            <table class="col-6 moviesTable">
+                <tr>
+                    <th>Title</th>
+                    <th>Genre</th>
+                    <th>Director</th>
+                </tr>
+                <tbody id="movie-library"></tbody>
+            </table>
+        </div>
     </div>
 
-    <p id="counter"></p>
-
-    <table>
-        <tr>
-            <th>Title</th>
-            <th>Genre</th>
-            <th>Director</th>
-        </tr>
-        <tbody id="movie-library"></tbody>
-    </table>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
