Added Modals for each movie on the table

--- a/Client/index.html
+++ b/Client/index.html
@@ -66,41 +66,7 @@
         </div>
     </div>
 
-    <button id="btn-edit-movie" type="button" class="btn btn-primary" data-toggle="modal" data-target="#edit-movie">Edit</button>
-    
-
-    <div class="modal fade" id="edit-movie" tabindex="-1" role="dialog" aria-labelledby="editMovie" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="edit-movie">Edit Movie</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="movie-title" class="col-form-label">Movie Title</label>
-                            <input type="text" class="form-control" id="movie-title">
-                        </div>
-                        <div class="form-group">
-                            <label for="movie-genre" class="col-form-label">Movie Genre</label>
-                            <input type="text" class="form-control" id="movie-genre">
-                        </div>
-                        <div class="form-group">
-                            <label for="movie-director" class="col-form-label">Movie Director</label>
-                            <input type="text" class="form-control" id="movie-director">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Edit Movie</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="modals"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
