--- a/Client/index.html
+++ b/Client/index.html
@@ -30,27 +30,6 @@
                         <button type="submit" class="btn btn-primary col-4" id="btn-add-movie">Add a New Movie</button>
                     </div>
                 </form>
-                <!-- <form action="javascript:void(0);" method="PUT" onsubmit="EditMovie()">
-                    <div class="col-12" id="edit-movie">
-                        <div class="form-group col-10">
-                            <label for="editMovieId">Movie Id</label>
-                            <input type="text" class="form-control" id="edit-movie-id" placeholder="Enter movie Id..">
-                        </div>
-                        <div class="form-group col-10">
-                            <label for="editMovieTitle">Movie Title</label>
-                            <input type="text" class="form-control" id="edit-movie-title" placeholder="Enter movie title..">
-                        </div>
-                        <div class="form-group col-10">
-                            <label for="editMovieGenre">Movie Genre</label>
-                            <input type="text" class="form-control" id="edit-movie-genre" placeholder="Enter movie genre..">
-                        </div>
-                        <div class="form-group col-10">
-                            <label for="editMovieDirector">Movie Director</label>
-                            <input type="text" class="form-control" id="edit-movie-director" placeholder="Enter movie director..">
-                        </div>
-                        <button type="submit" class="btn btn-primary col-4" id="btn-edit-movie">Edit a Movie</button>
-                    </div>
-                </form> -->
             </div>
             <div class="col-6">
                 <p id="counter"></p>
@@ -59,6 +38,7 @@
                         <th>Title</th>
                         <th>Genre</th>
                         <th>Director</th>
+                        <th>Action</th>
                     </tr>
                     <tbody id="movies"></tbody>
                 </table>
