--- a/Client/index.html
+++ b/Client/index.html
@@ -1,63 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Movie Library</title>
-</head>
-<body>
-    <div class="jumbotron jumbotron-fluid" style="text-align: center; border-radius: 10px;">
-        <div class="container">
-            <h1 class="display-4">Movie Library</h1>
-            <p class="lead">Welcome to Movie Library! In this library, you're able to add, view, update, and delete movies.</p>
-        </div>
-    </div>
-    <button type="submit" id="btn-add-new-movie" class="btn btn-primary">Add a New Movie</button>
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <form action="javascript:void(0);" method="POST" onsubmit="AddMovie()">
-                    <div class="col-12" id="add-movie">
-                        <div class="form-group col-10">
-                            <label for="inputMovieTitle">Movie Title</label>
-                            <input type="text" class="form-control" id="add-title" placeholder="Enter movie title.." required>
-                        </div>
-                        <div class="form-group col-10">
-                            <label for="inputMovieGenre">Movie Genre</label>
-                            <input type="text" class="form-control" id="add-genre" placeholder="Enter movie genre.." required>
-                        </div>
-                        <div class="form-group col-10">
-                            <label for="inputMovieDirector">Movie Director</label>
-                            <input type="text" class="form-control" id="add-director" placeholder="Enter movie director.." required>
-                        </div>
-                        <button type="submit" class="btn btn-primary col-4" id="btn-add-movie">Add a New Movie</button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-6">
-                <p id="counter"></p>
-                <table class="col-12 moviesTable">
-                    <tr>
-                        <th>Title</th>
-                        <th>Genre</th>
-                        <th>Director</th>
-                        <th>Action</th>
-                    </tr>
-                    <tbody id="movies"></tbody>
-                </table>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+        <title>Movie Library</title>
+    </head>
+    <body>
+        <div class="jumbotron jumbotron-fluid" style="text-align: center; border-radius: 10px;">
+            <div class="container">
+                <h1 class="display-4">Movie Library</h1>
+                <p class="lead">Welcome to Movie Library! In this library, you're able to add, view, update, and delete movies.</p>
             </div>
         </div>
-    </div>
 
-    <div class="modals"></div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-</body>
+        <button type="button" id="btn-add-new-movie" class="btn btn-primary" data-toggle="modal" data-target="#add-new-movie" style="margin: auto; display: block; height: 60px; width: 200px;">Add a New Movie</button>
+        
+        <br>
+
+        <div class="modal fade" id="add-new-movie" tabindex="-1" role="dialog" aria-labelledby="addNewMovie" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewMovie">Add a New Movie</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="add-title" class="col-form-label">Movie Title:</label>
+                                <input type="text" class="form-control" id="add-title" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="add-genre" class="col-form-label">Movie Genre:</label>
+                                <input type="text" class="form-control" id="add-genre" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="add-director" class="col-form-label">Movie Director:</label>
+                                <input type="text" class="form-control" id="add-director" required>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button onclick="AddMovie()" type="button" data-dismiss="modal" class="btn btn-primary">Add Movie</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="row">
+                <div class="col-12">
+                    <table class="col-12 table table-bordered table-hover moviesTable">
+                        <thead class="thead-dark" style="text-align: center;">
+                            <tr>
+                                <th>Title</th>
+                                <th>Genre</th>
+                                <th>Director</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="movies" style="text-align: center;">
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="modals"></div>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
