--- a/Client/index.html
+++ b/Client/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <title>Movie Library</title>
     </head>
     <body class="col-xl-8 col-lg-10">
-        <div class="jumbotron jumbotron-fluid" style="text-align: center; border-radius: 10px; margin-top: 10px;">
+        <div class="jumbotron jumbotron-fluid shadow" style="text-align: center; border-radius: 10px; margin-top: 10px;">
             <div class="container">
                 <h1 class="display-4">Movie Library</h1>
                 <p class="lead">Welcome to Movie Library! In this library, you're able to add, view, update, and delete movies.</p>
@@ -53,7 +54,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card shadow" style="margin: 0px;">
             <div class="row">
                 <div class="col-12">
                     <table class="col-12 table table-bordered table-hover moviesTable">
