--- a/Client/index.html
+++ b/Client/index.html
@@ -17,7 +17,10 @@
             </div>
         </div>
 
-        <button type="button" id="btn-add-new-movie" class="btn btn-secondary" data-toggle="modal" data-target="#add-new-movie" style="margin: auto; display: block; height: 60px; width: 200px;">Add a New Movie</button>
+        <div style="display: block; width: 410px; margin: auto;"> 
+            <button type="button" id="btn-add-new-movie" class="btn btn-secondary" data-toggle="modal" data-target="#add-new-movie" style=" display: inline-block; height: 60px; width: 200px;">Add a New Movie</button>
+            <button type="button" id="btn-search-movie" class="btn btn-primary" data-toggle="modal" onclick="SearchMovie()" style="display: inline-block; height: 60px; width: 200px;">Search Movie</button>
+        </div>
         
         <br>
 
@@ -73,6 +76,41 @@
                 </div>
             </div>
         </div>
+
+        <!-- <button type="button" id="btn-search-movie" class="btn btn-secondary" data-toggle="modal" data-target="#search-movie" style=" display: inline-block; height: 60px; width: 200px;">Search Movie</button>
+
+        <div class="modal fade" id="search-movie" tabindex="-1" role="dialog" aria-labelledby="addNewMovie" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewMovie">Search Movie</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="search-type"></label>
+                                <select for="search-type" class="form-control" id="search-type">
+                                    <option value="Title">Title</option>
+                                    <option value="Genre">Genre</option>
+                                    <option value="Director">Director</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="search-input" class="col-form-label"></label>
+                                <input type="text" class="form-control" id="search-input" required>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button onclick="SearchMovie()" type="button" data-dismiss="modal" class="btn btn-primary">Search Movie</button>
+                    </div>
+                </div>
+            </div>
+        </div> -->
 
         <div class="modals"></div>
         
