--- a/Client/index.html
+++ b/Client/index.html
@@ -19,7 +19,7 @@
 
         <div style="display: block; width: 410px; margin: auto;"> 
             <button type="button" id="btn-add-new-movie" class="btn btn-secondary" data-toggle="modal" data-target="#add-new-movie" style=" display: inline-block; height: 60px; width: 200px;">Add a New Movie</button>
-            <button type="button" id="btn-search-movie" class="btn btn-primary" data-toggle="modal" onclick="SearchMovie()" style="display: inline-block; height: 60px; width: 200px;">Search Movie</button>
+            <button type="button" id="btn-search-movie" class="btn btn-primary" data-toggle="modal" data-target="#search-movie" style="display: inline-block; height: 60px; width: 200px;">Search Movie</button>
         </div>
         
         <br>
@@ -77,13 +77,11 @@
             </div>
         </div>
 
-        <!-- <button type="button" id="btn-search-movie" class="btn btn-secondary" data-toggle="modal" data-target="#search-movie" style=" display: inline-block; height: 60px; width: 200px;">Search Movie</button>
-
-        <div class="modal fade" id="search-movie" tabindex="-1" role="dialog" aria-labelledby="addNewMovie" aria-hidden="true">
+        <div class="modal fade" id="search-movie" tabindex="-1" role="dialog" aria-labelledby="searchMovie" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="addNewMovie">Search Movie</h5>
+                        <h5 class="modal-title" id="search-movie">Search Movie</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -110,7 +108,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div class="modals"></div>
         
